fatta prima riga

--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
   </head>
   <body>
     <div class="container">
+      <div class="container primo">
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
       
     </div>
 
