fatta seconda colonna, corretto errore in 12-bool

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
-    <div class="container">
+  <body class="debug">
+      <!-- prima riga -->
       <div class="container primo">
         <div class="col-1">
           <p>1 col</p>
@@ -47,10 +47,11 @@
           <p>1 col</p>
         </div>
       </div>
-    </div>
-    <div class="container">
-      
-    </div>
-
+      <!-- seconda riga -->
+      <div class="container">
+        <div class="col-12">
+          <p>12 col</p>
+        </div>
+      </div>
   </body>
 </html>
