Finita terza riga

--- a/index.html
+++ b/index.html
@@ -53,5 +53,17 @@
           <p>12 col</p>
         </div>
       </div>
+      <!-- terza riga -->
+      <div class="container">
+        <div class="col-8">
+          <p>8 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+      </div>
   </body>
 </html>
