--- a/index.html
+++ b/index.html
@@ -65,5 +65,23 @@
           <p>2 col</p>
         </div>
       </div>
+      <!-- quarta riga -->
+      <div class="container">
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+        <div class="col-6">
+          <p>6 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+      </div>
   </body>
 </html>
