--- a/index.html
+++ b/index.html
@@ -83,5 +83,27 @@
           <p>1 col</p>
         </div>
       </div>
+      <!-- quinta riga -->
+      <div class="container">
+        <div class="col-6 container">
+          <div class="col-2 bottom">
+            <p>2 col</p>
+          </div>
+          <div class="col-2 bottom">
+            <p>2 col</p>
+          </div>
+          <div class="col-8 bottom">
+            <p>8 col</p>
+          </div>
+        </div>
+        <div class="col-6 container">
+          <div class="col-6 bottom">
+            <p>6 col</p>
+          </div>
+          <div class="col-6 bottom">
+            <p>6 col</p>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
