Aggiunti Offset su 12bool

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="debug">
       <!-- prima riga -->
-      <div class="container primo">
+      <div class="container">
         <div class="col-1">
           <p>1 col</p>
         </div>
@@ -104,6 +104,10 @@
             <p>6 col</p>
           </div>
         </div>
+      </div>
+      <!-- inizio esercizio bonus -->
+      <div class="container">
+        
       </div>
   </body>
 </html>
