Fatto primo test di offset

--- a/index.html
+++ b/index.html
@@ -106,8 +106,13 @@
         </div>
       </div>
       <!-- inizio esercizio bonus -->
-      <div class="container">
-        
+      <div class="container bonus">
+        <div class="col-2">
+          <p>Ciao</p>
+        </div>
+        <div class="col-2 col-offset-8">
+          <p><strong>Ciao</strong></p>
+        </div>
       </div>
   </body>
 </html>
