--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </div>
       <!-- seconda riga nesting e offset -->
-      <div class="container">
+      <div class="container bonus-middle">
         <div class="col-5 container">
           <div class="col-6">
             <p>Test</p>
